# aws-setter

./: Cargo.toml
resources/: aws-setter.yml  test_config.toml
src/: aws.rs  config.rs  main.rs
