[package]
name = "aws-setter"
version = "0.1.0"
authors = ["Torben Diegel <xendios@gmail.com>"]
edition = "2018"
description = "tool to get temporary credentials for a AWS role and write them to credentials file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_ini = "0.2"
serde_yaml = "0.8"
color-eyre = "0.5"
pretty_env_logger = "0.4"
config = "0.11"
cmd_lib = "1"
clap = "2.33"

[package.metadata.deb]
maintainer = "Torben Diegel <xendios@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
Assume AWS roles und write credentials to credentials file"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/aws-setter", "usr/bin/", "755"],
    # ["README.md", "usr/share/doc/env-setter/README", "644"],
]
